k8s/app_joern.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jervis-joern
  namespace: jervis
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: jervis-joern
  template:
    metadata:
      labels:
        app: jervis-joern
    spec:
      containers:
        - name: joern
          image: registry.damek-soft.eu/jandamek/jervis-joern:latest
          ports:
            - containerPort: 8082
          livenessProbe:
            httpGet:
              path: /
              port: 8082
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8082
            initialDelaySeconds: 15
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /
              port: 8082
            failureThreshold: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: jervis-joern
  namespace: jervis
spec:
  selector:
    app: jervis-joern
  ports:
    - port: 8082
      targetPort: 8082
