k8s/app_tika.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jervis-tika
  namespace: jervis
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: jervis-tika
  template:
    metadata:
      labels:
        app: jervis-tika
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: tika
          image: registry.damek-soft.eu/jandamek/jervis-tika:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          livenessProbe:
            httpGet:
              path: /
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /
              port: 8081
            failureThreshold: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: jervis-tika
  namespace: jervis
spec:
  selector:
    app: jervis-tika
  ports:
    - port: 8081
      targetPort: 8081
