k8s/app_whisper.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jervis-whisper
  namespace: jervis
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: jervis-whisper
  template:
    metadata:
      labels:
        app: jervis-whisper
    spec:
      containers:
        - name: whisper
          image: registry.damek-soft.eu/jandamek/jervis-whisper:latest
          ports:
            - containerPort: 8083
          livenessProbe:
            httpGet:
              path: /
              port: 8083
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8083
            initialDelaySeconds: 15
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /
              port: 8083
            failureThreshold: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: jervis-whisper
  namespace: jervis
spec:
  selector:
    app: jervis-whisper
  ports:
    - port: 8083
      targetPort: 8083
